Clean up the NewConfiguration interface
- Fine-tune getComponent methods
- Fine-tune getModules method
- Fine-tune getModulesFor method
- Remove buildConfiguration() for now. Perhaps bring it back later
- Remove start() method, as that's lifecycle concern that doesn't belong
 here
- Remove shutdown() method, as that's lifecycle concern that doesn't
belong here
- Remove lifecycleRegistry() method, as that's a lifecycle concern that
doesn't belong here
- Remove all infra getter methods, as those do not belong on the base
configuration
- Move all removed methods under the TODO
- Adjust the generic from T to C on component methods, as it's a
Component, not "Tomponent"
- Adjust the generic from T to M on module methods, as it's a
Module, not "Todule"
- Update all JavaDoc
- Add todo to rename this interface once the old Configuration is
removed

#3067